--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Harvest Lockup</h3><p>Max harvest lockup: 12 hours</p>
+										<h3>Liquidity Locked</h3><p>4 years</p>
 									</div>
 								</div>
 							</div>
