--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<meta property="og:image:width" content="1080">
 		<meta property="og:image:height" content="1080">
 		<meta property="og:title" content="Pokemon NFT">
-		<meta property="og:description" content='Pokemon NFT is a next-generation NFT farming protocol on the BSC network that automates capital allocation and relocation, compound yield, protects from "rug pulls"'>
+		<meta property="og:description" content='Pokemon NFT is a next-generation NFT Games protocol on the BSC network that makes you earn while playing."'>
 		<meta content="https://pokemon-nft.com/images/logo.png" name="twitter:image">
 		<meta name="twitter:title" content="Pokemon NFT">
-		<meta name="twitter:description" content='Pokemon NFT is a next-generation NFT farming protocol on the BSC network that automates capital allocation and relocation, compound yield, protects from "rug pulls"'>
+		<meta name="twitter:description" content='Pokemon NFT is a next-generation NFT Games protocol on the BSC network that makes you earn while playing."'>
 		<meta name="twitter:card" content="summary_large_image">
 		<link rel="shortcut icon" href="images/icons/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -266,10 +266,10 @@
 				<div class="bottom-navigation">
 					<div class="container">
 						<ul class="social-media">
-							<li><a target="_blank" href="https://twitter.com/A51DEFI"><i class="fab fa-twitter"></i></a></li>
-							<li><a target="_blank" href="https://t.me/Area51Defi"><i class="fab fa-telegram"></i></a></li>
-							<li><a target="_blank" href="https://medium.com/@area51defi"><i class="fab fa-medium"></i></a></li>
-							<li><a target="_blank" href="https://github.com/A51DEFI"><i class="fab fa-github"></i></a></li>
+							<li><a target="_blank" href=""><i class="fab fa-twitter"></i></a></li>
+							<li><a target="_blank" href=""><i class="fab fa-telegram"></i></a></li>
+							<li><a target="_blank" href=""><i class="fab fa-medium"></i></a></li>
+							<li><a target="_blank" href=""><i class="fab fa-github"></i></a></li>
 						</ul>
 						<div class="logo-container copyright text-center"><p>&copy; 2021 Pokemon NFT Games Defi Inc.</p><img src="images/area51_logo_128.png" alt="Area51Defi"></div>
 					</div>
