--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<li><a href="index.html#tokenomics" alt="Tokenomics">Tokenomics</a></li>
 							<li><a href="index.html#roadmap" alt="Roadmap">Roadmap</a></li>
 							<li><a href="" alt="Documents">Documents</a></li>
-							<li><a href="" alt="Launch App" id="btn-highlight">Launch Marketplace<span></span></a></li>
+							<li><a href="" alt="Launch App" id="btn-highlight">Marketplace<span></span></a></li>
 						</ul>
 					</div>
 				</div>
