--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<meta property="og:image:width" content="1080">
 		<meta property="og:image:height" content="1080">
 		<meta property="og:title" content="Pokemon NFT">
-		<meta property="og:description" content='Pokemon NFT is a next-generation NFT Games protocol on the BSC network that makes you earn while playing."'>
+		<meta property="og:description" content='Pokemon Defi is a next-generation Defi Games protocol on the BSC network that makes you earn while playing."'>
 		<meta content="https://pokemon-nft.com/images/logo.png" name="twitter:image">
 		<meta name="twitter:title" content="Pokemon NFT">
-		<meta name="twitter:description" content='Pokemon NFT is a next-generation NFT Games protocol on the BSC network that makes you earn while playing."'>
+		<meta name="twitter:description" content='Pokemon Defi is a next-generation Defi Games protocol on the BSC network that makes you earn while playing."'>
 		<meta name="twitter:card" content="summary_large_image">
 		<link rel="shortcut icon" href="images/icons/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,7 +65,7 @@
 		<section class="feature-section welcome-section scrollspy" id="home">
 			<div class="row introduction-content">
 				<div class="col s12 m12 l12 words-introduction">
-					<h1><img width="470px" height="170px" src="images/pokemon.png"></h1>
+					<h1><img width="470px" height="190px" src="images/pokemon.png"></h1>
 					<h1>THE NEXT DEFI GAME!</h1>
 					<div class="nav-actions"><a class="btn btn-join-telegram waves-effect waves-dark" href="" alt="Area51 Telegram">Telegram <i class="fab fa-telegram"></i> </a><a class="btn btn-join-twitter waves-effect waves-light" href="" alt="Area51 Twitter">Twitter <i class="fab fa-twitter"></i></a></div>
 				</div>
