--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						</div>
 					</div>
 				</section>
-				<h1 class="heading text-center">Partners</h1>
+				<h1 class="heading text-center">PARTNERS</h1>
 				<div id="content-desktop">
 			<center><img width="1150px" height="450px" src="images/Partners/partners.png" alt="PokemonDefi"></center>
 		</div>
