--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<li><a href="index.html#security" alt="NFT">Security</a></li>
 							<li><a href="index.html#tokenomics" alt="Tokenomics">Tokenomics</a></li>
 							<li><a href="index.html#roadmap" alt="Roadmap">Roadmap</a></li>
-							<li><a href="" alt="Documents">Documents</a></li>
+							<li><a href="" alt="Documents">Whitepaper</a></li>
 							<li><a href="" alt="Launch App" id="btn-highlight">Marketplace<span></span></a></li>
 						</ul>
 					</div>
