--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col s12 m12 l12 words-introduction">
 					<h1><img width="390px" height="190px" src="images/pokemon.png"></h1>
 					<h1>THE NEXT DEFI GAME!</h1>
-					<div class="nav-actions"><a class="btn btn-join-telegram waves-effect waves-dark" href="" alt="Area51 Telegram">Telegram <i class="fab fa-telegram"></i> </a><a class="btn btn-join-twitter waves-effect waves-light" href="" alt="Area51 Twitter">Twitter <i class="fab fa-twitter"></i></a></div>
+					<div class="nav-actions"><a class="btn btn-join-telegram waves-effect waves-dark" href="https://t.me/pokemondefi" alt="Pokemon Telegram">Telegram <i class="fab fa-telegram"></i> </a><a class="btn btn-join-twitter waves-effect waves-light" href="" alt="Pokemon Twitter">Twitter <i class="fab fa-twitter"></i></a></div>
 				</div>
 
 
@@ -279,7 +279,7 @@
 					<div class="container">
 						<ul class="social-media">
 							<li><a target="_blank" href=""><i class="fab fa-twitter"></i></a></li>
-							<li><a target="_blank" href=""><i class="fab fa-telegram"></i></a></li>
+							<li><a target="_blank" href="https://t.me/pokemondefi"><i class="fab fa-telegram"></i></a></li>
 							<li><a target="_blank" href=""><i class="fab fa-medium"></i></a></li>
 							<li><a target="_blank" href=""><i class="fab fa-github"></i></a></li>
 						</ul>
