--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
 							<div class="first-row">
 								<div class="token-info-card aniview" data-av-animation="slideInRight">
 									<div class="card-content">
-										<h3>Liquidity Adding Time</h3><p>TBA</p>
+										<h3>Liquidity Tracker</h3><p>N/A</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Pokemon Defi Games Platform</h3><p>TBA</p>
+										<h3>Token Holder</h3><p>N/A</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Transfer Tax</h3><p>Max transfer tax: 5%</p>
+										<h3>Token Price</h3><p>0.00</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Deposit Fee</h3><p>Max deposit fee: 4%</p>
+										<h3>Transaction</h3><p>Max deposit fee: 4%</p>
 									</div>
 								</div>
 								<div class="token-info-card">
