--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Token Price</h3><p>0.00</p>
+										<h3>Token Price</h3><p>$0.00</p>
 									</div>
 								</div>
 								<div class="token-info-card">
