--- a/index.html
+++ b/index.html
@@ -140,32 +140,32 @@
 							<div class="first-row">
 								<div class="token-info-card aniview" data-av-animation="slideInRight">
 									<div class="card-content">
-										<h3>Liquidity Tracker</h3><p>N/A</p>
+										<h3>CIRCULATING SUPPLY</h3><p>N/A</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Token Holder</h3><p>N/A</p>
+										<h3>MARKET CUP</h3><p>N/A</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Token Price</h3><p>$0.00</p>
+										<h3>TOKEN PRICE</h3><p>$0.00</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Transaction</h3><p>Max deposit fee: 4%</p>
+										<h3>TAX FEE</h3><p>Max deposit fee: 4%</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Anti Whale</h3><p>Min anti whale: 1.5%</p>
+										<h3>ANTI-WHALE</h3><p>Min anti whale: 1.5%</p>
 									</div>
 								</div>
 								<div class="token-info-card">
 									<div class="card-content">
-										<h3>Liquidity Locked</h3><p>4 years</p>
+										<h3>LIQUIDITY LOCKED</h3><p>4 years</p>
 									</div>
 								</div>
 							</div>
