--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<li><a href="index.html#roadmap" alt="Roadmap">Roadmap</a></li>
 							<li><a href="" alt="Documents">Whitepaper</a></li>
 							<li><a href="" alt="Launch App" id="btn-highlight">Marketplace<span></span></a></li>
-							<li><a href="whose_that_pokemon/index.html" alt="Launch App" id="btn-highlight">Who's that Pokemon?<span></span></a></li>
+							<li><a href="who's_that_pokemon/index.html" alt="Launch App" id="btn-highlight">Who's that Pokemon?<span></span></a></li>
 						</ul>
 					</div>
 				</div>
