--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 		  <style class="hover"></style>
 		
 		</main>
+		
+		<script src="https://cdn.logwork.com/widget/countdown.js"></script>
+<a href="https://logwork.com/countdown-qrry" class="countdown-timer" data-style="flip3" data-timezone="Asia/Manila" data-textcolor="#ffffff" data-date="2021-07-27 21:00" data-background="#c4b80c" data-digitscolor="#000000">DXsale Presale Start on:</a>
+		
 		<div class="main-container">
 			<div class="main-feature-container">
 				<section class="feature-section specifications scrollspy" id="products">
